# esmr_data

./: environment.yml  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
esmr_data/: __init__.py  esmr.py  esmr_extract_potws.py  filter_conditions.yaml
